# egui-tabs

./: .gitignore  COPYING  Cargo.toml  README.md  basic-cbac465edffe3d2f.js  basic-cbac465edffe3d2f_bg.wasm  index.html  shell.nix
.github/workflows/: pages.yml
egui-tabs/: Cargo.toml
egui-tabs/src/: lib.rs  main.rs
examples/: basic.rs
examples/basic/: Cargo.toml  index.html
examples/basic/src/: main.rs
src/: lib.rs
